# OpenGLStudy

./: 2Triangles.cpp  CMakeLists.txt
Tutorial1/: Tutorial1.cpp  init.cpp
Tutorial2/: Tutorial2.cpp
Tutorial3/: Tutorial3.cpp  Tutorial3_2.cpp
Tutorial3/Tutorial3_3/: Tutorial3_3.cpp  shader.h
Tutorial4/: Source.cpp
Tutorial5/Tutorial5_1/: main.cpp  shader.h
Tutorial5/Tutorial5_2/: main.cpp
Tutorial5/Tutorial5_3/: main.cpp
Tutorial5/Tutorial5_4/: main.cpp  shader.h
glad/include/glad/: glad.h
glad/src/: glad.c
glad4.6/include/glad/: glad.h
glad4.6/src/: glad.c
